<resources>
    <string name="app_name">ColorTalk</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin
        cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw
        chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate
        cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée
        dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes.
        Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans
        donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie
        chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes
    </string>
    <string name="article_detail_more_info">More Info</string>
    <string name="copy_right">Copyrights © %1$d</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">Witness</string>
    <string name="navigation_main">Main</string>
    <string name="navigation_chat">Chat</string>
    <string name="navigation_gallery">Gallery</string>
    <string name="navigation_picture_edit">Picture</string>
    <string name="navigation_sub_items">Config</string>
    <string name="navigation_setting">Setting</string>
    <string name="navigation_about">About</string>
    <string name="navigation_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>

    <string name="moment_load_fail">加载失败，请重试</string>
    <string name="retry">重试</string>
    <string name="ask_saving_picture">保存到手机?</string>
    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>
    <string name="action_share">分享</string>

    <string-array name="post_moment_images">
        <item>相册</item>
        <item>拍照</item>
    </string-array>

    <!--prefe-->
    <string name="pref_title_pattern_lock">Pattern lock</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_summary_theme">[ %1$s ]</string>
    <string name="pref_dialog_title_theme">Select theme</string>
    <string-array name="pref_entries_theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="pref_title_about">About</string>
    <string name="pattern_lock_title">Pattern lock</string>
    <string name="pref_title_set_pattern">Set unlock pattern</string>
    <string name="pref_summary_set_pattern_none">[ No pattern set ]</string>
    <string name="pref_summary_set_pattern_has">[ Pattern set ]</string>
    <string name="pref_title_pattern_visible">Make pattern visible</string>
    <string name="pref_summary_pattern_visible_off">Pattern will be hidden when drawing</string>
    <string name="pref_summary_pattern_visible_on">Pattern will be visible when drawing</string>
    <string name="pref_title_clear_pattern">Clear unlock pattern</string>
    <string name="pref_dialog_message_clear_pattern">Clear unlock pattern?</string>
    <string name="pattern_cleared">Unlock pattern has been cleared</string>

    <string name="set_pattern_title">Set unlock pattern</string>
    <string name="confirm_pattern_title">Confirm your unlock pattern</string>
    <string name="reset_pattern_title">Confirm password to reset pattern</string>
    <string name="reset_pattern_message">This is only a demo.\n\nPress "OK" to reset your unlock pattern.</string>
    <string name="pattern_reset">Unlock pattern has been reset</string>

    <string name="about_title">About</string>
    <string name="about_name">PatternLock</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_credit">Zhang Hai 2016</string>
    <string name="about_github"><a href="https://github.com/DreaminginCodeZH/PatternLock">View on GitHub</a></string>

    <string name="pg_sdk_edit_sample_edit">Edit</string>
    <string name="pg_sdk_edit_sample_choose_photo">Choose Image</string>
    <string name="pg_sdk_edit_sample_re_edit">Edit Again</string>
</resources>
