<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#00000000"
        android:visibility="invisible"
        android:adjustViewBounds="false"
        android:scaleType="fitCenter">
    </ImageView>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:orientation="horizontal">


        <Button
            android:id="@+id/choose_photo_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="#444444"
            android:gravity="center"
            android:text="@string/pg_sdk_edit_sample_choose_photo">
        </Button>

        <Button
            android:id="@+id/start_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/pg_sdk_edit_sample_edit">
        </Button>

        <Button
            android:id="@+id/re_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/pg_sdk_edit_sample_re_edit">
        </Button>
    </LinearLayout>

</LinearLayout>